...
) {
  val coroutineScope = rememberCoroutineScope()
  val individualFoodItemViewModel = IndividualFoodItemViewModel(foodItemRepository, userRepository)
  val context = LocalContext.current

  Scaffold(
      modifier = Modifier.testTag("IndividualFoodItemScreen"),
      topBar = {
        CustomTopAppBar(
            onClick = { navigationActions.goBack() },
            title =
                if (individualFoodItemViewModel.selectedFood != null)
                    individualFoodItemViewModel.selectedFood!!.foodFacts.name
                else "",
            titleTestTag = "IndividualFoodItemName",
            actions = {
              IconButton(
                  onClick = {
                    individualFoodItemViewModel.selectedFood?.let {
                      coroutineScope.launch {
                        individualFoodItemViewModel.deleteFoodItem()
...
