...
      scope = scope, drawerState = drawerState, navigationActions = navigationActions) {
        if (selectedHousehold == null && households.isEmpty()) {
          Log.d("OverviewScreen", households.toString())
          navigationActions.navigateTo(Screen.FIRST_TIME_USER)
        } else {
          Scaffold(
              modifier = Modifier.testTag("overviewScreen"),
              topBar = {
                selectedHousehold?.let {
                  TopNavigationBar(
                      houseHold = it,
                      onHamburgerClick = { scope.launch { drawerState.open() } },
                      filters = overviewScreenViewModel.filters,
...
                          }

                      // Add
                      FloatingActionButton(
                          onClick = { navigationActions.navigateTo(Screen.ADD_FOOD) },
                          containerColor = MaterialTheme.colorScheme.secondaryContainer,
                          modifier = Modifier.testTag("addFoodFab")) {
                            Icon(Icons.Default.Add, contentDescription = "Add")
                          }
                    }
              },
          ) { paddingValues ->
            Column(
...
