...
          Toast.makeText(context, "Google sign-in failed!", Toast.LENGTH_LONG).show()
        }
      }

  val token = stringResource(R.string.default_web_client_id)

  Scaffold(modifier = Modifier.fillMaxSize().testTag("signInScreen")) { padding ->
    Column(
        modifier = Modifier.fillMaxSize().padding(padding).padding(20.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center) {
          Image(
              painter = painterResource(id = R.drawable.shelf_life_logo),
...
                          .requestEmail()
                          .build()
                  val googleSignInClient = GoogleSignIn.getClient(context, gso)
                  launcher.launch(googleSignInClient.signInIntent)
                }
              },
              modifier = Modifier.testTag("loginButton"))

          if (signInState is SignInState.Loading) {
            Spacer(modifier = Modifier.height(16.dp))
            CircularProgressIndicator(modifier = Modifier.testTag("signInLoadingIndicator"))
          }
        }
...
