...
) {
  OutlinedTextField(
      value = foodName,
      onValueChange = onFoodNameChange,
      label = { Text(stringResource(id = R.string.food_name_hint)) },
      isError = foodNameErrorResId != null,
      modifier = modifier.fillMaxWidth().testTag("inputFoodName"))
  if (foodNameErrorResId != null) {
    Text(
        text = stringResource(id = foodNameErrorResId),
        color = MaterialTheme.colorScheme.error,
        style = MaterialTheme.typography.bodySmall,
        modifier = Modifier.fillMaxWidth(),
...
      options = FoodCategory.entries.toTypedArray(),
      selectedOption = category,
      onOptionSelected = onCategoryChange,
      expanded = categoryExpanded,
      onExpandedChange = onCategoryExpandedChange,
      optionLabel = { fromCapitalStringToLowercaseString(it.name) },
      modifier = modifier.fillMaxWidth().testTag("inputFoodCategory"))
}

/**
 * Composable function to display a dropdown menu for selecting the location.
 *
 * @param location The currently selected location.
...
