...

  private var FILTERS =
      mapOf(
          "Dairy" to FoodCategory.DAIRY,
          "Meat" to FoodCategory.MEAT,
          "Fish" to FoodCategory.FISH,
          "Fruit" to FoodCategory.FRUIT,
          "Vegetables" to FoodCategory.VEGETABLE,
          "Grain" to FoodCategory.GRAIN,
          "Beverage" to FoodCategory.BEVERAGE,
          "Snack" to FoodCategory.SNACK,
          "Other" to FoodCategory.OTHER)

  var filters = FILTERS.keys.toList()

  private val _query = MutableStateFlow<String>("")
  val query = _query.asStateFlow()

...
