...
    <string name="app_name">Shelf Life</string>

    <!-- Default Web Client ID -->
    <string name="default_web_client_id">1096875383271-iltoi30htgc5bhsh7jfafq0213f65cd4.apps.googleusercontent.com</string>

    <!-- Screen Titles -->
    <string name="add_food_item_title">Add Food Item</string>
    <string name="edit_food_item_title">Edit Food Item</string>
    <string name="first_food_item_title">Choose Food Item Name</string>
    <string name="choose_food_item_title">Choose Food Item Image</string>
    <string name="finalize_food_item_title">Finalize Food Item</string>
    <string name="easteregg_title">How did you get here ?</string>

...
